# embedded_dotnet_runtime_examples

./: .gitignore  .gitmodules  Host.sln  LICENSE  README.md  README.source.md  build_run.bat  build_run.sh
.config/: dotnet-tools.json
.github/workflows/: CI.yml
Host/: CMakeLists.txt  Common.h  Host.cpp  Host.vcxproj  Host.vcxproj.filters  Test_DllImport.h  Test_ManagedEntryPoint.h  Test_ManagedFunctionPointer.h  Test_ManagedString.h  Test_ManagedUnsafe.h  Test_NativeArray.h  Test_NativeExport.h  Test_NativeFunctionPointer.h  Test_NativeString.h  Test_NativeVTable.h
Lib/: ArrPointer.cs  CString.cs  Lib.csproj  LibClass.cs  ModuleLoader.cs  Pointer.cs  Test_DllImport.cs  Test_ManagedEntryPoint.cs  Test_ManagedFunctionPointer.cs  Test_ManagedString.cs  Test_ManagedUnsafe.cs  Test_NativeArray.cs  Test_NativeExport.cs  Test_NativeFunctionPointer.cs  Test_NativeString.cs  Test_NativeVTable.cs  UnmanagedMemory.cs
